fix directory rename.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -13,7 +13,7 @@ serialize =
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
-[bumpversion:file:scpi/version.py]
+[bumpversion:file:scpilib/version.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
